update post - algo2

--- a/_posts/2024-03-27-java-알고리즘-복습-2.md
+++ b/_posts/2024-03-27-java-알고리즘-복습-2.md
@@ -189,4 +189,5 @@ static void bfs(int start){
 그 이유는 공간 복잡도에 있는데, 인접 리스트는 공간 복잡도를 뜻하는 간선의 개수가 트리 구조로 인하여 $V(정점 개수) - 1$ 로 정해지는 반면, 인접 행렬 구조는 $V^2$ 이기 때문이다.
 
 #### 예시 문제
-- [BOJ 11725 - 트리의 부모 찾기](https://www.acmicpc.net/problem/11725){: target='_blank' }
+- [BOJ 11725 - 트리의 부모 찾기](https://www.acmicpc.net/problem/11725){: target='_blank' }, [BOJ 1991 - 트리 순회](https://www.acmicpc.net/problem/1991){: target='_blank' }, [BOJ 5639 - 이진 검색 트리](https://www.acmicpc.net/problem/5639){: target='_blank' }, [BOJ 15900 - 나무 탈출](https://www.acmicpc.net/problem/15900){: target='_blank' }, [BOJ 20364 - 부동산 다툼](https://www.acmicpc.net/problem/20364){: target='_blank' }, [BOJ 3584 - 가장 가까운 공통 조상](https://www.acmicpc.net/problem/3584){: target='_blank' }, [BOJ 1240 - 노드 사이의 거리](https://www.acmicpc.net/problem/1240){: target='_blank' }, [BOJ 9489 - 사촌](https://www.acmicpc.net/problem/9489){: target='_blank' }
+- Subtree 문제 : 큰 문제와 작은 문제 개념을 이해하자. [BOJ 1068 - 트리*(DP 미리보기)](https://www.acmicpc.net/problem/1068){: target='_blank' }, [BOJ 15681 - 트리와 쿼리](https://www.acmicpc.net/problem/15681){: target='_blank' }, [BOJ 14267 - 회사 문화 1](https://www.acmicpc.net/problem/14267){: target='_blank' }
