--- a/_posts/2024-03-19-java-알고리즘-복습-1.md
+++ b/_posts/2024-03-19-java-알고리즘-복습-1.md
@@ -12,7 +12,7 @@ math: true
 
 ---
 
-## 알고리즘
+## 알고리즘이란?
 문제를 해결하기 위한 **절차(방법)**이다.
 
 주어진 문제에 맞춰서 **입력**을 넣으면 원하는 **출력**을 얻을 수 있도록 해주는 프로그래밍이다.
@@ -22,12 +22,12 @@ math: true
 ---
 
 ### 알고리즘에 좋은 습관은?
-#### 문제를 올바른 순서로 이해하자
+#### 🔹문제를 올바른 순서로 이해하자
 1. 시간, 메모리 제한 확인하고 문제를 꼼꼼히 읽기
 2. 제공되는 정보들과 예제 데이터를 이해
 3. 가능한 최대, 최소 정답에 맞는 데이터를 직접 생성
 
-#### 시간 복잡도, 공간 복잡도 계산
+#### 🔹시간 복잡도, 공간 복잡도 계산
 문제를 풀기전에 제한시간을 맞출 수 없는 알고리즘의 경우를 제외할 수 있다.
 
 |알고리즘|시간 복잡도|공간 복잡도|
@@ -37,10 +37,10 @@ math: true
 |Quick Sort|평균 O(N log N), 최대 O(N^2)|O(V)|
 |Binary Search|O(N log N)|O(N)|
 
-#### 코드를 함수화해서 효율적으로 구현
+#### 🔹코드를 함수화해서 효율적으로 구현
 같은 코드의 반복은 함수화해서 효율적으로 구현한다.
 
-#### 부분 점수를 챙긴다.
+#### 🔹부분 점수를 챙긴다.
 여러 문제의 부분점수를 챙기는 것이 한 문제만 다 푸는것보다 높은 점수를 챙기는 경우가 생긴다.
 
 ---
