update css - header hideUnderline - latex margin
update post
- algo 3

update snippet
- hide underline

--- a/_posts/2023-11-10-chirpy-마크다운-문법-작성-팁.md
+++ b/_posts/2023-11-10-chirpy-마크다운-문법-작성-팁.md
@@ -13,6 +13,7 @@ image:
   alt: Responsive rendering of Chirpy theme on multiple devices.
 ---
 
+<p class='hideUnderline'></p>
 > 이 포스트는 Chirpy에서 제공하는 마크다운 문법을 어떻게 작성하고 렌더링되는지 정리한 글이다. [원본글](https://chirpy.cotes.page/posts/text-and-typography/)은 자세한 사용방법이 따로 나와있지 않다.
 {: .prompt-info}
 
