--- a/_posts/2024-04-02-java-알고리즘-복습-3.md
+++ b/_posts/2024-04-02-java-알고리즘-복습-3.md
@@ -72,10 +72,87 @@ math: true
 |이름|간선 가중치|시작점|도착점|시간 복잡도|
 |:--:|:--:|:--:|:--:|:--:|
 |**BFS**|1|1개|V(모든 정점)|$O(V + E)$|
-|**Dijkstra**|0 이상|1개|V(모든 정점)|$O(Elog{V})$|
+|**Dijkstra**|0 이상|1개|V(모든 정점)|$O(E\log{V})$|
 |**Floyd-Warshall**|제약 없음|**V(모든 정점)**|V(모든 정점)|$O(V^3)$|
 |**Bellman-Ford**|제약 없음|1개|V(모든 정점)|$O(V*E)$|
 |**SPFA**|제약 없음|1개|V(모든 정점)|$O(V*E)$|
 |**A\***|0 이상|1개|**1**|$O(b^d)$|
 
-위 방식중에서도 코딩 테스트에는 BFS, Dijkstra 알고리즘이 주로 나온다.
+위 방식중에서도 코딩 테스트에는 **BFS, Dijkstra** 알고리즘이 주로 나온다.
+
+Dijkstra 를 알아보기 전에, 그래프에서의 탐색을 리마인드 해보자.
+
+탐색이란 시작점에서 0개 이상의 간선을 거쳐 갈 수 있는 정점들을 찾는 것이다.
+
+대표적인 방식으로 앞서서 **DFS, BFS** 를 배웠다.
+
+BFS 의 경우에는 **간선의 가중치가 동일**할 때, **최소 이동 횟수로 최단거리를 계산**할 수 있었다.
+
+이제 다익스트라 알고리즘은 어떻게 탐색을 하는지 알아보자.
+
+#### 다익스트라(Dijkstra) 알고리즘
+먼저 다익스트라 알고리즘을 사용하기 위해서는 다음 항목들을 고려해야 한다.
+
+##### Input
+- 가중치가 0 이상인 간선들로 이루어진 그래프($G(V, E)$)
+- 시작 정점 $S$ or 시작 정점들 $\lbrace S_1, ... \rbrace$
+
+##### Output
+- 시작 정점 $S$ 로 부터 모든 정점까지의 최단 거리
+
+##### 시간 복잡도
+시간 복잡도는 $O(E\log{V})$ 이다.
+
+그 외에도 탐색에 필요한 두가지 자료구조를 사용한다.
+
+- $dist[i]$ : 시작 정점 $S$ 에서 $i$ 번 정점까지의 최단 거리를 저장한 배열
+- $D$ : $\lbrace (v, d) \rbrace$( = **시작 정점** $S$ 에서 **정점** $v$ 까지 **가중치** $d$ 를 통해 갈 수 있다는 정보) 들을 저장하는 자료구조.
+
+##### 순서도
+다익스트라 알고리즘의 동작을 순서도로 표현하면 다음과 같다.
+
+![순서도](/assets/img/captures/11_dijkstra.png){: width='500' .normal }
+
+번호별로 동작을 살펴보자.
+
+1. ㆍ$dist$ 배열은 **시작 정점**은 **0**, **나머지 정점**들은 **최대값**으로 설정한다.<br>
+    ㆍ$D$ 에는 $(S, 0)$ 을 추가한다.
+2. $D$ 가 비어있는지 체크한다.
+3. $D$ 에서 **최단 거리 d 를 갖는 데이터** $(v, d)$ 를 추출한다.
+4. 추출한 **최단 거리 데이터** $(v, d)$ 가 $dist[v]$ 에 **저장된 최단거리보다 짧은지** 확인한다.<br>
+    (더 큰 경우, 실제 최단거리가 아니기 때문에 가치가 없는 정보이므로 폐기한다.)
+5. $(v, d)$ 가 최단 거리가 맞다면, 이를 기반으로 $v$ 에 **연결된 간선**들을 보고 **연결된 정점으로의 거리 데이터** $(v_i, d_i)$ 들을 $D$ 에 추가한다.
+6. 더이상 D에 정보가 없으면 종료한다.
+
+시간 측면에서 살펴보면 3번 과정에서 $D$ 로부터 원소를 추출하고, 5번 과정에서 $D$ 로 원소를 추가한다.
+
+추출 횟수는 추가 횟수 이하일 수 밖에 없고, 추가하는 횟수의 최대값은 모든 정점의 차수(= 연결된 간선의 개수)의 합과 같다.(모든 정점은 **최대 한 번**씩 가치가 있는 v 로 사용된다.)
+
+$$
+N(추가) \approx deg(1) + deg(2) + ... deg(V) = \|E\|
+$$
+
+이제 3번, 5번 과정에 걸리는 시간 $T(3)$, $T(4)$ 를 알면 된다.
+
+이는 $D$ 를 구현할 때 어떤 **자료구조**를 사용하는지에 따라 달라진다.
+
+**1차원 배열**의 경우 추가는 **1** 의 시간복잡도로 매우 빠르지만, 최소값을 추출하는데 전체를 살펴봐야 하므로 **N** 의 시간복잡도를 가진다.
+
+**Min Heap** 이나 **Priority Queue** 같은 경우 추가와 추출(poll 시 최소값이 추출됨) 모두 $\log{E}$ 의 시간 복잡도를 가진다.
+
+다익스트라 알고리즘의 시간복잡도를 표현하자면 아래와 같다.
+
+$$
+T(전체 시간) \le [T(5) + T(3)] * E
+$$
+
+이처럼 두 종류의 시간 합을 사용할 때, 한쪽이 작더라도 다른 한쪽이 매우 크면 결과적으로 더 커질 수 밖에 없다.
+
+따라서 한쪽만 아주 작은 것 보다, 전체적으로 작은 것이 더 낫다.
+
+이러한 관점에서 1차원 배열 보다는 **Min Heap / Priority Queue** 가 더 적합하다.
+
+따라서 $O(E \log{E})$ 의 시간 복잡도를 가지게 되는데, $E$ 는 $V^2$ 이하일 수 밖에 없다. $\log$ 에서 제곱은 2배밖에 안되므로, 결국 3~5 과정은 최대 **$O(E \log{V})$** 로 표현이 가능하다.
+
+#### 예시 문제
+- [BOJ 1916 - 최소비용 구하기](https://www.acmicpc.net/problem/1916){: target='_blank' }
