update css - dl padding left - header margin top - ol margin left
update post
- algo 3

new post
- algo 4

--- a/_posts/2024-03-27-java-알고리즘-복습-2.md
+++ b/_posts/2024-03-27-java-알고리즘-복습-2.md
@@ -14,7 +14,7 @@ math: true
 
 ## 알고리즘 분류
 ### 그래프(Graph)
-**자료구조에서 그래프란?**
+#### 자료구조에서 그래프란?
 
 ![graph](/assets/img/captures/1_graph.png){: width='450' .normal }
 
