--- a/_posts/2024-04-04-java-알고리즘-복습-4.md
+++ b/_posts/2024-04-04-java-알고리즘-복습-4.md
@@ -414,6 +414,38 @@ $$
 
 ---
 
+다음은 트리에 DP를 적용하는 문제이다.
+
+[BOJ 15681 - 트리와 쿼리](https://www.acmicpc.net/problem/15681){: target='_blank' }
+
+이러한 subtree 문제는 작은 문제로 큰 문제를 푸는 방식을 적용하기 아주 좋은 예시이다.
+
+자식 노드의 subtree 를 사용해서 부모 노드의 subtree 의 결과값을 얻을 수 있기 때문이다.
+
+그럼 이제 DP 과정을 수행해보자.
+
+##### 1. 문제 정의
+`Dy[i]` : i 가 루트 노드인 subtree 의 정점의 개수
+
+##### 2. 풀 수 있는가?
+`Dy[루트노드]` 값이 곧 답이 된다.
+
+##### 3. 초기값
+단말 노드가 곧 초기값이 된다. 단말 노드의 subtree 의 정점은 자기 자신밖에 없으므로 1이 된다.
+
+##### 4. 점화식 구하기
+부모 자식 관계를 사용해서 구해낸다.
+
+**$Dy[부모 노드] = \sum Dy[자식 노드]$**
+
+이전의 문제의 경우 for 반복문을 사용하여 차례차례 Dynamic Table 을 채워나갔다면, 이 문제는 트리 구조의 탐색에 사용한 dfs 를 활용하여 채워나간다.
+
+따라서 시간복잡도는 $O(V + E) = O(N)$ 이 된다.
+
+비슷한 문제로 [BOJ 1949 - 우수 마을](https://www.acmicpc.net/problem/1949){: target='_blank' } 이 있다.(이 문제의 점화식을 잘 생각해보자. 풀이를 보면 되게 쉬운데 떠올리기까지가 힘들다. 이전의 subtree 점화식에 특정 기준 하나를 더 추가하는데, 문제에서 주어진 조건을 보고 잘 생각해보자.)
+
+---
+
 #### 번외) 동적프로그래밍의 역추적(Backtrack)
 동적 프로그래밍을 정말로 이해했다고 말하기 위해서는 다음 질문에 대해서 대답할 수 있어야 한다고 한다.
 
