--- a/_posts/2024-04-02-java-알고리즘-복습-3.md
+++ b/_posts/2024-04-02-java-알고리즘-복습-3.md
@@ -156,3 +156,84 @@ $$
 
 #### 예시 문제
 - [BOJ 1916 - 최소비용 구하기](https://www.acmicpc.net/problem/1916){: target='_blank' }
+
+---
+
+#### Floyd-Warshall
+다익스트라가 한 정점에서 다른 정점으로의 최단 거리를 구한다면, Floyd-Warshall 은 모든 정점에서 모든 정점으로의 최단 거리를 구한다.
+
+Floyd-Warshall 의 알고리즘을 간단하게 식으로 표현하면 다음과 같다.
+
+**$D_{ab} = min(D_{ab} \ , \ D_{ax} + D_{xb})$**
+
+이러한 식을 점화식이라고 하며, 이는 DP 알고리즘에서 사용되는 개념이다. DP 에 대해서는 다음장에서 다룰 예정이므로 일단은 점화식이 무엇인지 감만 잡고 넘어가자.
+
+점화식이 표현하는 바는 다음과 같다. N개의 정점을 각각 목적지에 도달하기 위한 경유지 역할로 사용한다. 이 경유지를 거치지 않은 노드간의 거리와 경유지를 거친 경우의 거리 중 더 짧은 거리를 최단거리 배열 D 에 저장한다.
+
+##### 예시
+이에 대한 간단한 예시를 살펴보자.
+
+아래의 그림은 4개의 정점과 간선들로 표현된 그래프이다.
+
+![Floyd-Warshall](/assets/img/captures/12_fw.png){: width='300' .normal }
+
+이 그래프의 내용으로 Floyd-Warshall 알고리즘이 어떻게 동작하는지 살펴보자.
+
+먼저 각 정점끼리의 **최단거리 배열을 초기화**하는데, 이는 주어진 간선의 정보를 사용한다. 출발점과 도착점 2가지를 기준으로 정보를 저장하기 때문에 **2차원 배열**을 사용한다.
+
+이러한 배열을 초기화할 때, **출발 정점과 도착 정점이 같으면 비용이 0** 이고, **정점간의 이동경로가 없는 경우 비용을 무한대(inf)** 로 저장한다.
+
+이에 따라 배열을 초기화하면 다음과 같다.
+
+![Floyd-Warshall](/assets/img/captures/13_fw.png){: width='600' .normal }
+
+이제 모든 정점간의 최단 거리를 갱신하기 위해서 각 정점을 경유지로 설정하고 배열의 정보를 갱신해보자.
+
+먼저 1번 정점을 경유지로 설정하는 경우, 갱신할 수 있는 이동 경로는 다음과 같다.
+
+**경유지 : 1번 정점**
+
+![Floyd-Warshall](/assets/img/captures/14_fw.png){: width='600' .normal }
+
+보면 알겠지만 굉장히 단순한 방식을 사용한다. 안타깝게도 1번 정점을 경유하는 경우 갱신되는 최단거리 값이 없다.
+
+이제 마찬가지로 나머지 2, 3, 4번 정점에 대해서 같은 작업을 반복한다.
+
+**경유지 : 2번 정점**
+
+![Floyd-Warshall](/assets/img/captures/15_fw.png){: width='600' .normal }
+
+드디어 갱신할 최단거리가 생겼다. 이 정보를 배열에 저장하자.
+
+![Floyd-Warshall](/assets/img/captures/16_fw.png){: width='300' .normal }
+
+**경유지 : 3번 정점**
+
+![Floyd-Warshall](/assets/img/captures/17_fw.png){: width='600' .normal }
+
+최단거리 배열을 갱신한다.
+
+![Floyd-Warshall](/assets/img/captures/18_fw.png){: width='300' .normal }
+
+**경유지 : 4번 정점**
+
+![Floyd-Warshall](/assets/img/captures/19_fw.png){: width='600' .normal }
+
+변화된 최단거리가 없다.
+
+이제 최종적으로 완성된 최단거리 배열은 다음과 같다.
+
+![Floyd-Warshall](/assets/img/captures/20_fw.png){: width='300' .normal }
+
+방식 자체는 단순하지만 수행하는데 걸리는 시간을 살펴보면 다음과 같다.
+
+먼저 모든 정점을 경유지로 사용하고(**N**), 경유지를 제외한 다른 정점들을 시작점으로 사용한다.(**N - 1**) 마지막으로 각각의 시작점에 대해 경유지를 제외한 도착점들에 대해 최단거리를 찾는다.(**N - 2**)
+
+따라서 시간 복잡도는 다음과 같다.
+
+**$O(N(N-1)(N-2)) \approx O(N^3)$**
+
+모든 정점에 대한 최단 거리를 찾는 만큼 다익스트라보다 훨씬 높은 시간 복잡도를 갖는다.
+
+#### 예시 문제
+- [BOJ 11404 - 플로이드](https://www.acmicpc.net/problem/11404){: target='_blank' }, [BOJ 2660 - 회장뽑기](https://www.acmicpc.net/problem/2660){: target='_blank' }
