update post - cs1: change title
new post
- cs2

--- a/_posts/2024-04-30-컴퓨터-구조-1-컴퓨터-시스템의-이해.md
+++ b/_posts/2024-04-30-컴퓨터-구조-1-컴퓨터-시스템의-이해.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 컴퓨터 구조 1
+title: 컴퓨터 구조 1 - 컴퓨터 시스템의 이해
 date: '2024-04-30 18:01:59 +0900'
 category: [CS, 컴퓨터구조]
 tags: [CS,컴퓨터구조]
