--- a/_posts/2024-05-03-컴퓨터-구조-2-데이터의-표현.md
+++ b/_posts/2024-05-03-컴퓨터-구조-2-데이터의-표현.md
@@ -182,3 +182,66 @@ Packed Decimal 의 **Sign bit** 를 맨 뒤로 미룬 후 절대치들만 모두
 ![packed decimal](/assets/img/captures/2_packed_decimal.png){: width='600' .normal }
 
 변환된 결과는 연산에는 사용이 가능하지만, 입출력에는 사용이 불가능하다.
+
+---
+
+## 실수 표현
+실수형이란, 과학적 표기인 **지수(exponent) 형태를 사용하여 소수점의 위치를 이동시키는 표현 형태(부동 소수점, Floating-point)**이다.
+
+이러한 실수형은 비트 수에 따른 분류가 가능하다.
+
+### 단일 정밀도 부동 소수점 형식(Single-Precision Floating Point)
+예를들어 32비트의 실수 형식인 단일 정밀도 부동 소수점 형식을 알아보자.
+
+IEEE 754 표준에 정의된 binary32 형식의 사용 방법은 다음과 같다.
+
+1. 실수값은 2진수로 표현한다.
+2. 표현된 2진수값을 (1.XXXX) 형태로 정규화한다.
+    - 이 때, 정규화에 사용된 지수값에 편향값인 127을 더한다.
+3. 정규화된 값을 다음과 같은 3가지 부분으로 저장한다.
+    - 첫번째 비트는 **부호를 나타내는 부호(Sign) 비트**로 사용한다.
+        - 0: 양수(+), 1: 음수(-)
+    - 다음 8비트는 **지수를 나타내는 지수(Exponent) 비트**로 사용된다.
+        - 표준에 정의된 binary32 형식은 bias127, 즉 지수부의 편향값으로 127을 사용한다.
+        - 실제 지수값 + 127 을 2진수값으로 저장한다.
+    - 나머지 23비트는 **가수를 나타내는 가수(Fraction) 비트**로 사용된다.
+        - 실제 값을 나타내는 부분이 된다.
+        - 정규화된 값에서 앞의 **1.** 을 제외한 뒷부분
+
+이를 간단한 예시로 살펴보면 다음과 같다.
+
+#### 실수값 저장
+먼저, 실수값을 저장하기위해 변환하는 과정을 보자.
+
+실수값 **15.6875** 을 저장한다고 가정하자.
+
+이를 이진수값으로 표현하면 다음과 같다.
+
+$15.6875 = 1111.1011_{(2)}$
+
+이를 정규화하면 다음과 같은 지수값을 얻을 수 있다.
+
+$1111.1011_2 = 1.1111011_2 * 2^3$
+
+따라서 실제 저장은 다음과 같이 한다.
+
+- 부호 비트 : 양수이므로 0
+- 지수부 : $3 + 127 = 130 = 10000010_{(2)}$
+- 가수부 : $1111 0110 0000 0000 0000 000_{(2)}$
+
+![float](/assets/img/captures/3_float.png){: width='500' .normal }
+
+#### 저장된 값 실수화
+다음은 저장된 값을 실제 실수값으로 변환하는 과정이다.
+
+![float](/assets/img/captures/4_float.png){: width='500' .normal }
+
+지수부에 저장된 값은 실제 지수값이 아닌 편향값인 127을 더한 값이 저장된다. 따라서 위 예시의 실제 지수값은 저장된 값에 편향값인 127을 뺀 값이다.
+
+실제 지수값 : $10000010_{(2)} - 127 = 130 - 127 = 3$
+
+따라서 가수부에 저장된 값에 $2^3$ 만큼을 곱해주면 원래 실수값을 구할 수 있다.
+
+실제 실수값 : $1.가수부_2 * 2^{지수값} = 1.10011000001_2 * 2^3 = 1100.11000001_2 = 12.75390625$
+
+이러한 표준은 C, C++, C#, Java 언어에서 float 라는 타입명으로 사용된다.
