update post - rename every post of cs2
new post
- cs2-4

update css
- header margin-top

update snippet
- left aligned image caption

--- a/_posts/2024-05-03-컴퓨터-구조-2-1-데이터의-표현-단위-진법-보수.md
+++ b/_posts/2024-05-03-컴퓨터-구조-2-1-데이터의-표현-단위-진법-보수.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 컴퓨터 구조 - 2. 데이터의 표현(단위, 진법, 보수)
+title: 컴퓨터 구조 - 2-1. 데이터의 표현(단위, 진법, 보수)
 date: '2024-05-03 15:48:47 +0900'
 category: [CS, 컴퓨터구조]
 tags: [CS,컴퓨터구조]
