--- a/_posts/2024-05-09-컴퓨터-구조-2-2-데이터의-표현-정수-표현-실수-표현.md
+++ b/_posts/2024-05-09-컴퓨터-구조-2-2-데이터의-표현-정수-표현-실수-표현.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 컴퓨터 구조 - 2. 데이터의 표현(정수 표현, 실수 표현)
+title: 컴퓨터 구조 - 2-2. 데이터의 표현(정수 표현, 실수 표현)
 date: '2024-05-09 17:12:53 +0900'
 category: [CS, 컴퓨터구조]
 tags: [CS,컴퓨터구조]
