--- a/_posts/2024-05-09-컴퓨터-구조-2-3-데이터의-표현-디지털-코드-에러-검출-코드.md
+++ b/_posts/2024-05-09-컴퓨터-구조-2-3-데이터의-표현-디지털-코드-에러-검출-코드.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 컴퓨터 구조 - 2. 데이터의 표현(디지털 코드, 에러 검출 코드)
+title: 컴퓨터 구조 - 2-3. 데이터의 표현(디지털 코드, 에러 검출 코드)
 date: '2024-05-09 17:16:58 +0900'
 category: [CS, 컴퓨터구조]
 tags: [CS,컴퓨터구조]
