update post - post 2-4

--- a/_posts/2024-05-10-컴퓨터-구조-2-4-데이터의-표현-논리-게이트-부울-대수-카노-맵.md
+++ b/_posts/2024-05-10-컴퓨터-구조-2-4-데이터의-표현-논리-게이트-부울-대수-카노-맵.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 컴퓨터 구조 - 2-4. 데이터의 표현(논리 게이트, 부울 대수)
+title: 컴퓨터 구조 - 2-4. 데이터의 표현(논리 게이트, 부울 대수, 카노 맵)
 date: '2024-05-10 14:16:22 +0900'
 category: [CS, 컴퓨터구조]
 tags: [CS,컴퓨터구조]
@@ -237,3 +237,138 @@ $$
 4. 묶인 항의 $(a + 1)$ 은 무조건 True 이므로 생략이 가능하다.<br>따라서 간략화된 최종 식은 $bc + a'b$ 가 된다.
 
 이와 같이 복잡한 식을 간략화 하기 위해 부울 대수를 사용한다.
+
+---
+
+## 3. 카노 맵(Karnaugh Map)
+위에서 부울 대수의 법칙을 활용해 표현식을 간략화해보았는데, 이는 *여러 법칙을 사용한 방식*이었다.
+
+반면 카노 맵을 활용한 맵 방법은 **부울 함수를 곧바로 간소화** 할 수 있어 널리 활용된다.
+
+이러한 카노 맵은 깊게 파고들면 많은 내용을 알아야 하지만 간단하게 사용하는 이유와 방법만 알아보자.
+
+### 카노 맵의 표현
+카노 맵은 입출력의 진리표를 바탕으로 표현식의 간편화를 위해 그려지는 표 형태의 맵이다.
+
+이러한 카노 맵을 표현할 때는 다음과 같은 규칙을 지켜야 한다.
+
+#### 1. 변수가 n개 이면 카노 맵은 $2^n$개의 민텀(minterm)으로 구성된다.
+이해를 위해 변수의 개수에 따른 카노 맵의 구성을 미리 살펴보자.
+
+- **변수가 2개**인 경우
+
+    |변수|b|b'|
+    |:-:|:-:|:-:|
+    |**a**|ab|ab'|
+    |**a'**|a'b|a'b'|
+- **변수가 3개**인 경우
+
+    |변수|bc|b'c|b'c'|bc'|
+    |:-:|:-:|:-:|:-:|:-:|
+    |**a**|abc|ab'c|ab'c'|abc'|
+    |**a'**|a'bc|a'b'c|a'b'c'|a'bc'|
+- **변수가 4개**인 경우
+
+    |변수|cd|c'd|c'd'|cd'|
+    |:-:|:-:|:-:|:-:|:-:|
+    |**ab**|abcd|abc'd|abc'd'|abcd'|
+    |**a'b**|a'bcd|a'bc'd|a'bc'd'|a'bcd'|
+    |**a'b'**|a'b'cd|a'b'c'd|a'b'c'd'|a'b'cd'|
+    |**ab'**|ab'cd|ab'c'd|ab'c'd'|ab'cd'|
+
+위의 표 형태가 카노 맵이고, 첫번째 행과 열을 제외한 **내부의 값들이 민텀(minterm)**이다.
+
+이 민텀은 minterm expansion(최소항 전개) 에서 비롯된 개념인데, minterm expansion 은 논리 함수의 모든 변수가 곱의 합 형태로 표현된 형태를 말한다.
+
+예를들어 $E = a(b + c) + bc$ 는 분배 법칙으로 전개가 가능하므로 minterm expansion 이 아니다. 분배된 후의 식인 $E = ab + ac + bc$ 가 바로 minterm expansion 이 된다.
+
+이러한 minterm expansion 에서 나올 수 있는 모든 곱 형태의 항들은 카노 맵 내부의 민텀(최소항)들의 값으로 표현될 수 있으며, **변수의 개수가 늘어남에 따라 카노 맵이 나타내는 민텀의 개수가 $2^n$ 개**로 늘어난다.
+
+#### 2. 인접한 민텀들 간에는 하나의 변수만이 변경되어야 한다.
+위의 예시 카노 맵 중 하나를 보자.
+
+|변수|cd|c'd|c'd'|cd'|
+|:-:|:-:|:-:|:-:|:-:|
+|**ab**|abcd|abc'd|abc'd'|abcd'|
+|**a'b**|a'bcd|a'bc'd|a'bc'd'|a'bcd'|
+|**a'b'**|a'b'cd|a'b'c'd|a'b'c'd'|a'b'cd'|
+|**ab'**|ab'cd|ab'c'd|ab'c'd'|ab'cd'|
+
+위 표 형태의 카노 맵에서 인접하다는 의미는 **바로 옆 행이나 열**이라는 것을 의미한다.
+
+결국 바로 옆 행 혹은 바로 옆 열 민텀들 사이의 **차이점은 4개의 변수중 딱 1개만 존재**한다는 뜻이다.
+
+이러한 특성 때문에 첫번째 행과 열의 변수의 **순서가 0, 1, 2, 3 순서가 아닌 0, 1, 3, 2 순서로 배치**가 된다.<br>(ex. ab, a'b, a'b', ab' = 00, 01, 11, 10 이런 식.)
+
+따라서 이러한 순서로 위 카노 맵을 다시 표현하면 다음과 같은 순서가 된다.
+
+|변수|cd|c'd|c'd'|cd'|
+|:-:|:-:|:-:|:-:|:-:|
+|**ab**|0|1|3|2|
+|**a'b**|4|5|7|6|
+|**a'b'**|12|13|15|14|
+|**ab'**|8|9|11|10|
+
+#### 3. 출력이 1인 기본 곱에 해당하는 민텀은 1로, 나머지는 0으로 표시한다.
+이 내용은 뒤에서 실제 예시를 보면서 이해를 해보자.
+
+### 카노 맵을 이용한 간편화
+이제 위의 규칙을 따라 만들어진 카노 맵을 사용해 부울 식을 간편화 해보자.
+
+이전처럼 부울 대수의 기본 법칙에 따라 간편화를 하는게 아닌 카노 맵을 사용해서 간편화를 해보자.
+
+간편화를 진행할 부울 식은 이전의 식을 재활용한다.
+
+$E = a'b + abc + bc$
+
+위 식은 3개의 변수를 가진 부울 식이다.
+
+식을 간편화하기 위해서는 먼저 카노 맵을 그려야 한다.
+
+|변수|bc|b'c|b'c'|bc'|
+|:-:|:-:|:-:|:-:|:-:|
+|**a**|?|?|?|?|
+|**a'**|?|?|?|?|
+
+위 카노 맵을 채워넣기 위해서 3번 표현 방법(**3. 출력이 1인 기본 곱에 해당하는 민텀은 1로, 나머지는 0으로 표시한다.**)을 사용한다.
+
+#### 1. 민텀을 찾아 1로 표기
+minterm expansion 형태의 식에서 각 항으로부터 민텀을 찾아낸다.
+
+- $a'b = a'b(c + c') = a'bc + a'bc'$
+- $abc$
+- $bc = (a + a')bc = abc + a'bc$
+
+어차피 한 항만 1이어도 minterm expansion 형태에서는 전체 출력값이 1이 되므로, 찾아낸 민텀은 1로 표기하고 나머지는 0으로 표기하여 카노 맵을 채워넣는다.
+
+귀찮으면 그냥 식 자체에 변수들의 값을 대입하여 출력값을 표기해도 된다.<br>(ex. 민텀 abc 는 a=1, b=1, c=1 로 사용해 출력값을 구해 카노 맵을 채워넣는다)
+
+|변수|bc|b'c|b'c'|bc'|
+|:-:|:-:|:-:|:-:|:-:|
+|**a**|1|0|0|0|
+|**a'**|1|0|0|1|
+
+#### 값이 1인 인접 민텀끼리 묶기
+이제 간편화를 위해 인접해있는 민텀들끼리 묶는다.
+
+> **인접한 민텀을 찾을 때 주의사항!**
+> 
+> 표 형태로 표현했기 때문에 헷갈릴 수 있는데, 위 표에서 민텀 **a'bc** 와 **a'bc'** 는 열이 끝과 끝으로 떨어져있어서 인접하지 않은 것처럼 보일 수 있다.
+> 
+> ![카노 맵](/assets/img/captures/14_karnaugh-map.png){: width='300' .normal }
+> 
+> 하지만 실제로는 두 최소항 사이에 단 하나의 변수(**c**)만이 변화했기 때문에, 이 최소항들도 인접해있는 것이다.
+{: .prompt-warning }
+
+값이 1인 인접한 민텀끼리 묶으면 총 2묶음이 나온다.
+
+![카노 맵](/assets/img/captures/15_karnaugh-map.png){: width='300' .normal }
+<em style='width: 300px;'>인접한 민텀들</em>
+
+각각의 묶음을 활용해 식을 다음과 같이 간편화가 가능하다.
+
+- $abc + a'bc = (a + a')bc =\;$**$bc$**
+- $a'bc + a'bc' = a'b(c + c') =\;$**$a'b$**
+- 간편화된 최종 식: **$bc + a'b$**
+
+이러한 카노 맵을 활용한 간편화 방식은 식이 복잡해질 수록 대부분의 식들을 더 편하게 간편화 할 수 있다.
