--- a/_posts/2024-05-09-컴퓨터-구조-2-3-데이터의-표현-디지털-코드-에러-검출-코드.md
+++ b/_posts/2024-05-09-컴퓨터-구조-2-3-데이터의-표현-디지털-코드-에러-검출-코드.md
@@ -14,8 +14,8 @@ math: true
 컴퓨터에서 데이터를 표현하는 방법에 대해서 알아보자.
 
 ## 1. 디지털 코드
-### 1-1. BCD Code(Binary Coded Decimal Code: 2진화 10진 코드, 8421 코드)
-큰 값을 가지는 십진수를 2진 변환하는 연산과정을 생략하기 위해 Unpacked Decimal 처럼 비 수치 데이터로서 사용되는 간단한 포맷이다.
+### 1-1. BCD Code
+**BCD Code(Binary Coded Decimal Code: 2진화 10진 코드, 8421 코드)**란 큰 값을 가지는 십진수를 2진 변환하는 연산과정을 생략하기 위해 Unpacked Decimal 처럼 비 수치 데이터로서 사용되는 간단한 포맷이다.
 
 십진수의 각 자리수를 4bit의 2진값으로 표현하는 방식을 사용한다.
 
