--- a/_posts/2024-05-15-컴퓨터-구조-2-5-데이터의-표현-조합-논리회로-기억회로-순차회로.md
+++ b/_posts/2024-05-15-컴퓨터-구조-2-5-데이터의-표현-조합-논리회로-기억회로-순차회로.md
@@ -26,6 +26,8 @@ _조합 논리회로, 기억회로, 순차회로_
 
 이 회로들을 하나씩 더 자세히 살펴보자.
 
+---
+
 ## 1. 조합논리 회로
 ![circuit](/assets/img/captures/2_circuit.png){: width='500' }
 
@@ -52,7 +54,7 @@ _조합 논리회로, 기억회로, 순차회로_
 
 반가산기에서 두 비트의 합 연산을 하나의 비트로 처리할 수 없어서 캐리 비트 C 를 추가했었다. 다만 반가산기에서는 발생한 캐리 비트를 처리하는 기능이 없고, 개선된 구조가 전가산기이다.
 
-##### 전가산기
+##### 🔹전가산기
 ![fulladder](/assets/img/captures/3_fulladder.png){: width='400' .normal }
 
 입력값에 이전 연산에서 발생한 캐리 비트 $C_0$ 가 추가되었고, 반가산기 구조 2개와 캐리 비트를 처리해주는 OR 게이트를 활용한다.
@@ -64,3 +66,69 @@ _조합 논리회로, 기억회로, 순차회로_
 
 #### 2) 멀티플렉서(Multiplexer)
 다수의 입력이 있을 때, 그 중 하나만을 신호 조작을 통해 선별적으로 출력하게 해주는 조합 논리회로이다.
+
+![multiplexer](/assets/img/captures/4_multiplexer.png){: width='500' .normal }
+
+4개의 입력값 $\mathbf{Input_0}$ ~ $\mathbf{Input_3}$ 을 받았을 때, 2개의 시그널 $S_0$, $S_1$ 을 활용해 입력값 중 하나의 값만 그대로 출력한다.
+
+|$S_0$|$S_1$|출력|
+|:-:|:-:|:-:|
+|0|0|$\mathbf{Input_0}$|
+|0|1|$\mathbf{Input_1}$|
+|1|0|$\mathbf{Input_2}$|
+|1|1|$\mathbf{Input_3}$|
+
+#### 3) 디멀티플렉서(Demultiplexer)
+멀티플렉서의 역 기능 개념으로, 하나의 입력값을 여러개의 출력으로 분해하는 기능을 가진 조합 논리회로이다.
+
+![demultiplexer](/assets/img/captures/5_demultiplexer.png){: width='400' .normal }
+
+위 그림을 예시로 들자면 시그널 $S_0$, $S_1$ 을 활용해 총 4가지의 출력핀 중 하나만 선택하여 입력값을 내보내는 논리 회로가 있다.
+
+|$S_0$|$S_1$|출력핀|
+|:-:|:-:|:-:|
+|0|0|$\mathbf{Output_0}$|
+|0|1|$\mathbf{Output_1}$|
+|1|0|$\mathbf{Output_2}$|
+|1|1|$\mathbf{Output_3}$|
+
+---
+
+## 2. 기억회로
+디지털 시스템의 대부분이 조합 논리회로를 가지고 있으며 순차회로로 구현되는 **저장요소**를 필요로 한다. 이러한 저장요소 역할을 하는 기억소자의 대표적인 것이 **플립플롭(FlipFlop)**이다.
+
+## 2-1. 플립플롭의 종류, 작동 원리
+플립플롭에서도 대표적인 것이 Latch 라 불리는 R-S Latch 와 D 플립플롭이 있다.
+
+### 1) R-S Latch
+1비트 값(0/1)을 다음 제어 입력이 들어올 때까지 유지(기억)하는 기억소자이다.
+
+![rslatch](/assets/img/captures/6_rslatch.png){: width='300' .normal }
+
+이 Latch 는 NOR 게이트로 만들어진 Latch 이고, NAND 게이트로 만들어진 Latch 또한 존재한다.
+
+먼저 Latch 의 입력값 R, S 에 따른 진리표를 살펴보자.
+
+|S|R|Q(T+1)|설명|
+|:-:|:-:|:-:|:-:|
+|0|0|$Q(T)$|No Change(상태 유지)|
+|0|1|0|Reset|
+|1|0|1|Set|
+|1|1|-|Indeterminate(Forbidden; 부정)|
+
+먼저 기억할 것이 2가지가 있다.
+
+1. NOR 게이트는 입력값이 하나라도 1인 경우 출력이 0이 된다.
+2. $Q$ 값과 $\overline{Q}$ 값은 반대의 값을 가져야 한다.
+
+따라서 R, S 값이 모두 1인 경우는 $Q$ 와 $\overline{Q}$ 값이 모두 0이 되므로 사용이 금지된다.
+
+따라서 입력값 $(R, S)$ 의 조작은 다음과 같다.
+
+![latch state](/assets/img/captures/7_latchstate.png){: width='350' .normal }
+<em style='width: 350px;'>R-S Latch</em>
+
+1. $S = 1$ 로 세팅되면 G2 게이트의 출력은 $\overline{Q}(T+1) = 0$ 이 되고, $R = 0$ 이므로 반대쪽 G1 게이트는 입력값 0, 0 을 받아서 출력값은 $Q(T+1) = 1$ 이 된다.
+2. 다시 $S = 0$ 으로 세팅되면 G2 게이트의 입력값은 $Q(T) = 1$ 과 $S = 0$ 이 되므로 출력값은 $\overline{Q}(T+1) = 0$ 이 된다. 이 값과 $R = 0$ 값이 G1 게이트의 입력으로 들어가서 출력값은 여전히 $Q(T+1) = 1$ 로 유지된다.
+3. $R = 1$ 로 세팅되면 G1 게이트의 출력은 $Q(T+1) = 0$ 이 되고, $S = 0$ 이므로 반대쪽 G2 게이트는 입력값 0, 0 을 받아서 출력값은 $\overline{Q}(T+1) = 1$ 이 된다.
+4. 다시 $R = 0$ 으로 세팅되면 G1 게이트의 입력값은 $\overline{Q}(T) = 1$ 과 $R = 0$ 이 되므로 출력값은 $Q(T+1) = 0$ 이 된다. 이 값과 $S = 0$ 값이 G2 게이트의 입력으로 들어가서 출력값은 여전히 $\overline{Q}(T+1) = 1$ 로 유지된다.
