update post - cs2-5

--- a/_posts/2024-05-15-컴퓨터-구조-2-5-데이터의-표현-조합-논리회로-기억회로-순차회로.md
+++ b/_posts/2024-05-15-컴퓨터-구조-2-5-데이터의-표현-조합-논리회로-기억회로-순차회로.md
@@ -97,11 +97,11 @@ _조합 논리회로, 기억회로, 순차회로_
 ## 2. 기억회로
 디지털 시스템의 대부분이 조합 논리회로를 가지고 있으며 순차회로로 구현되는 **저장요소**를 필요로 한다. 이러한 저장요소 역할을 하는 기억소자의 대표적인 것이 **플립플롭(FlipFlop)**이다.
 
-## 2-1. 플립플롭의 종류, 작동 원리
-플립플롭에서도 대표적인 것이 Latch 라 불리는 R-S Latch 와 D 플립플롭이 있다.
+## 2-1. 기억소자의 종류, 작동 원리
+기억소자에도 대표적인 것이 Latch 와 FlipFlop 이 있다. 하나씩 종류별로 알아보도록 하자.
 
 ### 1) R-S Latch
-1비트 값(0/1)을 다음 제어 입력이 들어올 때까지 유지(기억)하는 기억소자이다.
+1비트 값(0, 1)을 다음 제어 입력이 들어올 때까지 유지(기억)하는 기억소자이다.
 
 ![rslatch](/assets/img/captures/6_rslatch.png){: width='300' .normal }
 
@@ -123,6 +123,8 @@ _조합 논리회로, 기억회로, 순차회로_
 
 따라서 R, S 값이 모두 1인 경우는 $Q$ 와 $\overline{Q}$ 값이 모두 0이 되므로 사용이 금지된다.
 
+초기값은 모든 신호가 0인 상태를 가정하면 가장 먼저 NOR 게이트 G1 의 입력값은 0, 0 이 되므로 $Q = 1$ 이 되고(G1, G2 구조가 똑같고 동시에 켜지는데, 왜 G1 먼저 출력이 되는건지 궁금하긴 하다. 칩 내부 구조가 그렇게 되어있나? 아니면 어짜피 초기값은 안쓰니까 랜덤이어도 신경 쓸 필요가 없는걸까?), G2 의 입력값은 0, 1 이 되므로 $\overline{Q} = 0$ 이 된다.
+
 따라서 입력값 $(R, S)$ 의 조작은 다음과 같다.
 
 ![latch state](/assets/img/captures/7_latchstate.png){: width='350' .normal }
@@ -132,3 +134,61 @@ _조합 논리회로, 기억회로, 순차회로_
 2. 다시 $S = 0$ 으로 세팅되면 G2 게이트의 입력값은 $Q(T) = 1$ 과 $S = 0$ 이 되므로 출력값은 $\overline{Q}(T+1) = 0$ 이 된다. 이 값과 $R = 0$ 값이 G1 게이트의 입력으로 들어가서 출력값은 여전히 $Q(T+1) = 1$ 로 유지된다.
 3. $R = 1$ 로 세팅되면 G1 게이트의 출력은 $Q(T+1) = 0$ 이 되고, $S = 0$ 이므로 반대쪽 G2 게이트는 입력값 0, 0 을 받아서 출력값은 $\overline{Q}(T+1) = 1$ 이 된다.
 4. 다시 $R = 0$ 으로 세팅되면 G1 게이트의 입력값은 $\overline{Q}(T) = 1$ 과 $R = 0$ 이 되므로 출력값은 $Q(T+1) = 0$ 이 된다. 이 값과 $S = 0$ 값이 G2 게이트의 입력으로 들어가서 출력값은 여전히 $\overline{Q}(T+1) = 1$ 로 유지된다.
+
+#### 🔹R-S Latch with Single Input
+R-S Latch 에서 두개의 입력값 R, S 를 하나로 사용할 수 있을까?
+
+정답은 "할수는 있다" 이다. 아래의 그림을 보자.
+
+![RS Latch with Single Input](/assets/img/captures/8_rslatchsingleinput.png){: width='350' .normal }
+
+보다시피 입력신호 IN 의 값을 하나는 반대로(NOT Gate; Inverter), 하나는 그대로 사용해 동시에 게이트 G1, G2 의 입력으로 보내고 있다.
+
+입력신호를 하나로 만들긴 했으니 이에따른 진리표를 살펴보자.
+
+|$IN$|$R$|$S$|$Q$|$\overline{Q}$|설명|
+|:-:|:-:|:-:|:-:|:-:|:-:|
+|0|1|0|0|1|Reset|
+|1|0|1|1|0|Set|
+
+보다시피 하나의 입력값으로 Set, Reset 을 모두 수행할 수 있다. **하지만!!** 입력값을 하나로 만든것에따른 문제점도 존재한다.
+
+기존의 R-S Latch 에서는 정확하게 입력신호에 3가지 state 가 존재했다. Single Input 에서도 가능한 Set, Reset 을 제외하면 나머지는 바로 **No Change** 즉, 값을 유지하는 state 이다.
+
+따라서 입력값을 하나로 합쳤을 때의 문제점은 바로 Set, Reset 을 할 수는 있지만, 그러한 **출력값을 유지할 수가 없다는 점**이다.
+
+이러한 문제점을 해결하기 위해서는, **Set 과 Reset 을 할 때에만 IN 을 받아들이고 다른 때에는 무시**하여 값을 유지하면 된다.
+
+#### 🔹R-S Latch with Enable
+이제 문제점을 해결하기 위해 새로운 입력신호 EN(Enable) 를 사용해보자. 동작원리를 이해하기 위해 일단 입력신호 R, S 를 그대로 사용한다.
+
+![RS Latch With Enable](/assets/img/captures/9_rslatchwithen.png){: width='400' .normal }
+
+입력값 R, S 가 XOR 게이트와 바로 연결된 R-S Latch 에 Enable 신호가 추가된 형태의 Latch 이다.
+
+**Enable 의 값이 0인 경우** : R 값과 S 값에 상관없이 AND 게이트 **A1, A2 가 모두 0 을 출력**하기 때문에 기존의 R-S Latch 에서 $R = 0$, $S = 0$ 입력값을 받은것과 같이 출력값 $Q(T)$ 와 $\overline{Q}$ 를 **유지**하게 된다.
+
+**Enable 의 값이 1인 경우** : R 값과 S 값이 그대로 A1, A2 게이트로 출력되므로 R-S Latch 에서 처럼 출력값을 Set, Reset 할 수 있게된다.
+
+즉 **출력값을 변경하기 위해서는 EN 신호가 1** 이어야 하며, **EN 신호가 0 이면 다른 입력신호에 상관없이 출력값이 계속 유지**된다.
+
+어떻게 보면 EN 신호가 R-S Latch 자체를 켜고 끈다고 생각해도 될듯하다.
+
+> 유튜브를 검색하다가 정말 설명을 잘해놓은 영상을 발견했다. 유튜버 **Ben Eater** 의 영상으로 구독자가 무려 122만명 ㄷㄷ;
+>
+> **R-S Latch** : <https://www.youtube.com/watch?v=KM0DdEaY5sY>{: target='_blank' }<br>
+> **R-S Latch with Enable, D latch** : <https://www.youtube.com/watch?v=peCh_859q7Q>{: target='_blank' }
+> 
+> 다만 외국인 유튜버라 영어를 해야한다는 점~ 설명을 알아들을 수 있기만 한다면 최고의 영상인 것 같다. 뭐 못알아들어도 대충 눈치로.. 알 수 있잖아?
+{: .prompt-tip }
+
+이제 입력신호 R, S 를  IN 하나로 통일한 경우를 봐야하는데, 이 구조가 바로 D Latch 더라. 자연스럽게 넘어가보자.
+
+### 2) D Latch
+![D Latch](/assets/img/captures/10_dlatch.png){: width='400' .normal }
+
+입력신호를 D 하나로 통합시켰다. 이전의 [R-S Latch with Single Input](#r-s-latch-with-single-input) 에서 확인한대로 D 를 통해 출력값 Q 를 Set, Reset 할 수 있다.
+
+이러한 출력값을 유지하기 위해서는 EN 을 1 로 설정한 상태에서 D 를 설정(Set: 1, Reset: 0)하고 원하는 출력값 Q 가 되었을 때 EN 을 0 으로 설정하면 유지가 가능하다.
+
+다시말해 **EN 이 1 일때 출력값 Q 를 설정할 수 있고, EN 이 0 이 되는 시점에서의 Q 값이 계속 유지된다**는 뜻이다.
