--- a/_posts/2024-05-10-컴퓨터-구조-2-4-데이터의-표현-논리-게이트-부울-대수-카노-맵.md
+++ b/_posts/2024-05-10-컴퓨터-구조-2-4-데이터의-표현-논리-게이트-부울-대수-카노-맵.md
@@ -247,7 +247,7 @@ $$
 
 이러한 카노 맵은 깊게 파고들면 많은 내용을 알아야 하지만 간단하게 사용하는 이유와 방법만 알아보자.
 
-### 카노 맵의 표현
+### 3-1. 카노 맵의 표현
 카노 맵은 입출력의 진리표를 바탕으로 표현식의 간편화를 위해 그려지는 표 형태의 맵이다.
 
 이러한 카노 맵을 표현할 때는 다음과 같은 규칙을 지켜야 한다.
@@ -312,7 +312,7 @@ $$
 #### 3. 출력이 1인 기본 곱에 해당하는 민텀은 1로, 나머지는 0으로 표시한다.
 이 내용은 뒤에서 실제 예시를 보면서 이해를 해보자.
 
-### 카노 맵을 이용한 간편화
+### 3-2. 카노 맵을 이용한 간편화
 이제 위의 규칙을 따라 만들어진 카노 맵을 사용해 부울 식을 간편화 해보자.
 
 이전처럼 부울 대수의 기본 법칙에 따라 간편화를 하는게 아닌 카노 맵을 사용해서 간편화를 해보자.
@@ -332,7 +332,7 @@ $E = a'b + abc + bc$
 
 위 카노 맵을 채워넣기 위해서 3번 표현 방법(**3. 출력이 1인 기본 곱에 해당하는 민텀은 1로, 나머지는 0으로 표시한다.**)을 사용한다.
 
-#### 1. 민텀을 찾아 1로 표기
+#### 1) 민텀을 찾아 1로 표기
 minterm expansion 형태의 식에서 각 항으로부터 민텀을 찾아낸다.
 
 - $a'b = a'b(c + c') = a'bc + a'bc'$
@@ -348,7 +348,7 @@ minterm expansion 형태의 식에서 각 항으로부터 민텀을 찾아낸다
 |**a**|1|0|0|0|
 |**a'**|1|0|0|1|
 
-#### 값이 1인 인접 민텀끼리 묶기
+#### 2) 값이 1인 인접 민텀끼리 묶기
 이제 간편화를 위해 인접해있는 민텀들끼리 묶는다.
 
 > **인접한 민텀을 찾을 때 주의사항!**
