update post -cs 2-5 dflipflop

--- a/_posts/2024-05-15-컴퓨터-구조-2-5-데이터의-표현-조합-논리회로-기억회로-순차회로.md
+++ b/_posts/2024-05-15-컴퓨터-구조-2-5-데이터의-표현-조합-논리회로-기억회로-순차회로.md
@@ -192,3 +192,6 @@ R-S Latch 에서 두개의 입력값 R, S 를 하나로 사용할 수 있을까?
 이러한 출력값을 유지하기 위해서는 EN 을 1 로 설정한 상태에서 D 를 설정(Set: 1, Reset: 0)하고 원하는 출력값 Q 가 되었을 때 EN 을 0 으로 설정하면 유지가 가능하다.
 
 다시말해 **EN 이 1 일때 출력값 Q 를 설정할 수 있고, EN 이 0 이 되는 시점에서의 Q 값이 계속 유지된다**는 뜻이다.
+
+## 3) D FlipFlop
+https://www.youtube.com/watch?v=YW-_GkUguMM&t=194s
