new post - TIL w1d2 - 이력서 강의 포스트2
update post
- 이력서 강의 포스트1 완료
- TIL w1d1 제목 변경

--- a/_posts/2024-05-22-항해99-코스-진행-수기-1일차-이력서-작성-기초-프로젝트-파트-완성.md
+++ b/_posts/2024-05-22-항해99-코스-진행-수기-1일차-이력서-작성-기초-프로젝트-파트-완성.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 항해99 코스 진행 수기 1일차 - 이력서 강의
+title: 항해99 코스 진행 수기 1일차 - 이력서 작성 기초, 프로젝트 파트 완성
 date: '2024-05-22 16:14:40 +0900'
 category: [자기계발]
 tags: [항해99,부트캠프]
@@ -8,6 +8,8 @@ tags: [항해99,부트캠프]
 
 # 본 포스트에 관하여
 이번 포스트부터 이어지는 항해99 코스 진행 수기는 항해99 에서 진행하는 취업 리부트 코스 3기 과정을 수강하며 배운 내용을 정리하는 포스트이다.
+
+---
 
 ## 1. 이력서 작성 기초
 ### 1-1. 이력서 재료 준비
@@ -48,6 +50,8 @@ CRUD 나 간단한 라이브러리를 활용한 일반적인 기능을 구현한
 1. 중고 거래를 위해 유저간 소통이 가능한 창구가 필요했습니다.
 2. 대화 내용을 남길 수 있도록 텍스트 형태의 소통 방식을 고민했습니다.
 3. 서버 내용을 클라에게 전송하는 WebSocket 으로 채팅을 구현했어요.
+
+---
 
 ## 2. 프로젝트 파트 완성하기
 위에서 준비한 이력서 재료들의 문장을 잘 다듬어서 이력서를 작성하면 되는데, 그 중에서도 가장 중요한 항목으로 꼽히는 것은 프로젝트 경험이며 이를 통해 다음과 같은 사항들을 어필하면 좋다.
@@ -108,5 +112,25 @@ CRUD 나 간단한 라이브러리를 활용한 일반적인 기능을 구현한
 위 구문 다이어트 과정을 거친 문장들을 하나로 모은다.
 
 ### 2-2. 핵심 키워드 결정
+완성한 내용의 제목을 지을 차례이다. 제목은 내용을 요약하는게 목적이기 때문에 프로젝트 경험 내용의 핵심 키워드를 잘 선택해야 한다.
+
+핵심 키워드를 선정하기 위해서 다음 질문에 답해보자.
+
+내가 정리한 내용 중 면접에서 단 하나의 단어만 말할 수 있다면 무엇을 말할것인가?
+
+결국에는 경험 내용의 과정들이 무엇을 하기 위한 것들이었는가?
 
 ### 2-3. 두괄식 제목 설정
+제목이 흥미로우면 내용까지 보게된다.
+
+두괄식 구성으로 제목을 구성하여 흥미를 끌어보자.
+
+두괄식 구성이란, 주장을 먼저 얘기하고 그 뒤 근거로 뒷받침하는 방식을 의미한다.
+
+##### 두괄식 글
+- 제목에 핵심 키워드
+- 본문에 상세 내용(How?)을 쓰는 것
+
+##### 두괄식 제목
+- 결과 먼저 + 원인을 그 뒤에
+- 해결책 먼저 + 문제를 그 뒤에
