--- a/_posts/2023-11-09-github-블로그-만들기-1.md
+++ b/_posts/2023-11-09-github-블로그-만들기-1.md
@@ -8,11 +8,16 @@ tags: [jekyll, chirpy]
 
 # Github 블로그를 만들어보자.
 
-예전부터 개발 관련 블로그를 만드려고 했으나, 귀찮아서 미루고 미루다보니 더이상 안되겠다.
+예전부터 개발 관련 블로그를 만드려고 했으나, 솔직히 귀찮아서 미루고 미루다보니 더이상 안되겠다.
 
-뭐라도 후딱 만들어놔야 쓰던말던 할 것 같아서, 시작하는 github 블로그
+일단 후딱 만들어놔야 쓸 것 같아서, 시작하는 github 블로그!
 
-뭐 velog가 tistory다 다양한 블로그들이 있지만, 그냥 익숙하고 무료인 github를 사용하기로 했다.
+뭐 velog가 tistory다 다양한 블로그들이 있지만, 내 기준에서는 다음과 같은 점이 마음에 들었다.
+
+- 무제한의 무료 이용 기간과 간편한 배포
+- Ruby 언어의 Jekyll 을 기반으로 블로그를 직접 커스터마이징할 수 있다는 점
+
+이러한 장점들 때문에 github pages 를 사용해 github 블로그를 만들어보기로 했다.
 
 다음에 시간이 있으면 다른 블로그들은 뭐가 다른지 보는 것으로...
 
