--- a/_posts/2024-05-23-항해99-코스-진행-수기-2일차-자기소개-경력-학력-작성.md
+++ b/_posts/2024-05-23-항해99-코스-진행-수기-2일차-자기소개-경력-학력-작성.md
@@ -6,8 +6,8 @@ category: [자기계발]
 tags: [항해99,부트캠프]
 ---
 
-# 본 포스트에 관하여
-이번 포스트부터 이어지는 항해99 코스 진행 수기는 항해99 에서 진행하는 취업 리부트 코스 3기 과정을 수강하며 배운 내용을 정리하는 포스트이다.
+> 이번 포스트부터 이어지는 항해99 코스 진행 수기는 항해99 에서 진행하는 취업 리부트 코스 3기 과정을 수강하며 배운 내용을 정리하는 포스트이다.
+{: .prompt-tip }
 
 ---
 
