--- a/_posts/2024-05-15-컴퓨터-구조-2-5-데이터의-표현-조합-논리회로-기억회로-순차회로.md
+++ b/_posts/2024-05-15-컴퓨터-구조-2-5-데이터의-표현-조합-논리회로-기억회로-순차회로.md
@@ -95,10 +95,10 @@ _조합 논리회로, 기억회로, 순차회로_
 ---
 
 ## 2. 기억회로
-디지털 시스템의 대부분이 조합 논리회로를 가지고 있으며 순차회로로 구현되는 **저장요소**를 필요로 한다. 이러한 저장요소 역할을 하는 기억소자의 대표적인 것이 **플립플롭(FlipFlop)**이다.
+디지털 시스템의 대부분이 조합 논리회로를 가지고 있으며 순차회로로 구현되는 **저장요소**를 필요로 한다. 이러한 저장요소 역할을 하는 기억소자의 대표적인 것이 **플립플롭(Flip-Flop)**이다.
 
 ## 2-1. 기억소자의 종류, 작동 원리
-기억소자에도 대표적인 것이 Latch 와 FlipFlop 이 있다. 하나씩 종류별로 알아보도록 하자.
+기억소자에도 대표적인 것이 Latch 와 Flip-Flop 이 있다. 하나씩 종류별로 알아보도록 하자.
 
 ### 1) R-S Latch
 1비트 값(0, 1)을 다음 제어 입력이 들어올 때까지 유지(기억)하는 기억소자이다.
@@ -191,7 +191,54 @@ R-S Latch 에서 두개의 입력값 R, S 를 하나로 사용할 수 있을까?
 
 이러한 출력값을 유지하기 위해서는 EN 을 1 로 설정한 상태에서 D 를 설정(Set: 1, Reset: 0)하고 원하는 출력값 Q 가 되었을 때 EN 을 0 으로 설정하면 유지가 가능하다.
 
-다시말해 **EN 이 1 일때 출력값 Q 를 설정할 수 있고, EN 이 0 이 되는 시점에서의 Q 값이 계속 유지된다**는 뜻이다.
+다시말해 **EN 이 1 일때 입력값 D 를 조작해 출력값 Q 를 설정할 수 있고, EN 이 0 이 되는 시점에서의 Q 값이 계속 유지된다**는 뜻이다.
 
-## 3) D FlipFlop
-https://www.youtube.com/watch?v=YW-_GkUguMM&t=194s
+간단한 **타이밍 다이어그램**을 살펴보자.
+
+![timing diagram](/assets/img/captures/10_timingdiagram.png){: width='700' .normal }
+
+출력값의 변화는 EN 신호가 켜진 후 꺼질때 까지만 보면 알 수 있다.(1~2, 3~4, 5~6, 7~8)
+
+첫번째 EN 신호가 꺼지는 시점 ② 의 D 값은 0 이므로 출력값 Q 또한 0 이 되고, 이 값은 다음 EN 신호가 활성화되기 전까지 무조건 유지된다.
+
+마찬가지로 **다음 EN 신호가 켜지는 시점 ③ 에서는 D 의 값이 1** 이므로, **출력값 Q 도 1** 로 설정된다. 다시 EN 이 꺼지기 전 D가 0 으로 설정되므로 Q도 0으로 변하고, EN 신호가 종료되는 시점 ④ 의 값인 출력값 0 이 다음 EN 신호가 켜질때까지 유지된다.
+
+이러한 원리를 이해하면 나머지 부분도 쉽게 이해할 수 있다. 그러나 대부분의 디지털 논리 회로에는 더욱 복잡하고 많은 양의 Latch 들이 각각 다른 값들을 출력한다.
+
+이러한 관점에서 중요해지는 부분이 바로 회로의 다양한 소자들의 동기를 맞추는 것이다. 다음 소자로 넘어가보자.
+
+## 3) D Flip-Flop
+일반적으로 각 소자들의 동작들을 모두 동기화시켜주기 위해 클락이 존재한다.
+
+또한 출력값의 설정을 EN 이 활성화된 시간 안에서 자유롭게 설정하는 것 보다는 **짧은 Clock 신호가 잠깐 활성화된 특정 시점에 설정**하는 것도 중요하다.
+
+이러한 동작을 위해 만들어진 Latch 의 변형 형태가 Flip-Flop 이다.
+
+이번에도 **타이밍 다이어그램**을 살펴보자.
+
+![timing diagram](/assets/img/captures/11_timingdiagram.png){: width='700' .normal }
+
+Latch 와 달라진 것은 **출력값을 설정하는 시점**이다.
+
+조금 더 자세히 말하자면 EN 신호의 긴 활성화 시간과는 다르게, **CLK 이 활성화되는 그 짧은 시점(1, 2, 3, 4)에만 입력값 D 로 출력값 Q 를 설정**할 수 있게 하자는 컨셉이다.
+
+이러한 컨셉에 맞게 CLK 신호에 따른 EN 신호를 추가해 다시 그려보면 아래와 같은 뜻이 된다.
+
+![timing diagram real clk](/assets/img/captures/12_timingdiagram_clk.png){: width='700' .normal }
+
+**CLK 이 활성화 되는 시점을 감지**해서 그 짧은 시점에만 입력값을 사용할 수 있게 EN 이 설정된다. 이러한 EN 신호를 만들어주는 회로를 **Edge Detector** 라고 한다. 그렇다면 이 Edge Detector 의 실제 회로 구성은 어떨까?
+
+![흐음...](/assets/img/emoji/흐음콩.png){: width='150' }
+_흠터레스팅...._
+
+**그 방법은 바로바로...... 이 회로다!**
+
+![edge detector](/assets/img/captures/13_edgedetector.png){: width='600' .normal }
+
+하나의 신호를 두개로 나누어 AND 게이트의 입력으로 사용하는데, 한 쪽에는 인버터를 통한 반대값을 입력시켜준다.
+
+초기에는 입력 신호가 0 이고, AND 게이트에는 0 과 1 이 입력되기 때문에 EN 신호가 0 으로 유지된다.
+
+다음으로 **입력 신호가 1로 바뀐 시점**인데, 인버터가 존재하지 않는 쪽은 바로 1 이 입력되지만, **인버터가 있는 쪽은 사실 몇 나노초(ns)의 딜레이**가 실제로 존재한다.
+
+이러한 사실로 인해 내부적으로는 **CLK 신호가 1로 바뀌고 인버터를 통과하는 아주 짧은 시간동안 AND 게이트의 입력값이 1, 1 로 유지되고 EN 신호가 1로 설정**된다.
