update post - cs2-5 done
new post
- TIL W2D6

--- a/_posts/2024-05-10-컴퓨터-구조-2-4-데이터의-표현-논리-게이트-부울-대수-카노-맵.md
+++ b/_posts/2024-05-10-컴퓨터-구조-2-4-데이터의-표현-논리-게이트-부울-대수-카노-맵.md
@@ -372,3 +372,14 @@ minterm expansion 형태의 식에서 각 항으로부터 민텀을 찾아낸다
 - 간편화된 최종 식: **$bc + a'b$**
 
 이러한 카노 맵을 활용한 간편화 방식은 식이 복잡해질 수록 대부분의 식들을 더 편하게 간편화 할 수 있다.
+
+---
+
+## 정리
+데이터가 컴퓨터 내부에서는 실질적으로 게이트로 표현하고, 이 게이트는 부울대수를 통해 표현이 된다.
+
+또 이러한 게이트들을 활용한 설계를 위해 진리표를 만들어서 설계도로서 활용한다.
+
+이 진리표를 구현할 때, 개선 작업에 사용되는 부울 대수와 카노 맵에 대해서도 알아보았다.
+
+이러한 내용들이 바로 조합회로의 근간이 되는 내용들이다.
