--- a/_posts/2024-05-15-컴퓨터-구조-2-5-데이터의-표현-조합-논리회로-기억회로-순차회로.md
+++ b/_posts/2024-05-15-컴퓨터-구조-2-5-데이터의-표현-조합-논리회로-기억회로-순차회로.md
@@ -97,10 +97,10 @@ _조합 논리회로, 기억회로, 순차회로_
 ## 2. 기억회로
 디지털 시스템의 대부분이 조합 논리회로를 가지고 있으며 순차회로로 구현되는 **저장요소**를 필요로 한다. 이러한 저장요소 역할을 하는 기억소자의 대표적인 것이 **플립플롭(Flip-Flop)**이다.
 
-## 2-1. 기억소자의 종류, 작동 원리
+### 2-1. 기억소자의 종류, 작동 원리
 기억소자에도 대표적인 것이 Latch 와 Flip-Flop 이 있다. 하나씩 종류별로 알아보도록 하자.
 
-### 1) R-S Latch
+#### 1) R-S Latch
 1비트 값(0, 1)을 다음 제어 입력이 들어올 때까지 유지(기억)하는 기억소자이다.
 
 ![rslatch](/assets/img/captures/6_rslatch.png){: width='300' .normal }
@@ -135,7 +135,7 @@ _조합 논리회로, 기억회로, 순차회로_
 3. $R = 1$ 로 세팅되면 G1 게이트의 출력은 $Q(T+1) = 0$ 이 되고, $S = 0$ 이므로 반대쪽 G2 게이트는 입력값 0, 0 을 받아서 출력값은 $\overline{Q}(T+1) = 1$ 이 된다.
 4. 다시 $R = 0$ 으로 세팅되면 G1 게이트의 입력값은 $\overline{Q}(T) = 1$ 과 $R = 0$ 이 되므로 출력값은 $Q(T+1) = 0$ 이 된다. 이 값과 $S = 0$ 값이 G2 게이트의 입력으로 들어가서 출력값은 여전히 $\overline{Q}(T+1) = 1$ 로 유지된다.
 
-#### 🔹R-S Latch with Single Input
+##### 🔹R-S Latch with Single Input
 R-S Latch 에서 두개의 입력값 R, S 를 하나로 사용할 수 있을까?
 
 정답은 "할수는 있다" 이다. 아래의 그림을 보자.
@@ -159,7 +159,7 @@ R-S Latch 에서 두개의 입력값 R, S 를 하나로 사용할 수 있을까?
 
 이러한 문제점을 해결하기 위해서는, **Set 과 Reset 을 할 때에만 IN 을 받아들이고 다른 때에는 무시**하여 값을 유지하면 된다.
 
-#### 🔹R-S Latch with Enable
+##### 🔹R-S Latch with Enable
 이제 문제점을 해결하기 위해 새로운 입력신호 EN(Enable) 를 사용해보자. 동작원리를 이해하기 위해 일단 입력신호 R, S 를 그대로 사용한다.
 
 ![RS Latch With Enable](/assets/img/captures/9_rslatchwithen.png){: width='400' .normal }
@@ -184,7 +184,7 @@ R-S Latch 에서 두개의 입력값 R, S 를 하나로 사용할 수 있을까?
 
 이제 입력신호 R, S 를  IN 하나로 통일한 경우를 봐야하는데, 이 구조가 바로 D Latch 더라. 자연스럽게 넘어가보자.
 
-### 2) D Latch
+#### 2) D Latch
 ![D Latch](/assets/img/captures/10_dlatch.png){: width='400' .normal }
 
 입력신호를 D 하나로 통합시켰다. 이전의 [R-S Latch with Single Input](#r-s-latch-with-single-input) 에서 확인한대로 D 를 통해 출력값 Q 를 Set, Reset 할 수 있다.
@@ -207,7 +207,7 @@ R-S Latch 에서 두개의 입력값 R, S 를 하나로 사용할 수 있을까?
 
 이러한 관점에서 중요해지는 부분이 바로 회로의 다양한 소자들의 동기를 맞추는 것이다. 다음 소자로 넘어가보자.
 
-## 3) D Flip-Flop
+#### 3) D Flip-Flop
 일반적으로 각 소자들의 동작들을 모두 동기화시켜주기 위해 클락이 존재한다.
 
 또한 출력값의 설정을 EN 이 활성화된 시간 안에서 자유롭게 설정하는 것 보다는 **짧은 Clock 신호가 잠깐 활성화된 특정 시점에 설정**하는 것도 중요하다.
@@ -226,7 +226,7 @@ Latch 와 달라진 것은 **출력값을 설정하는 시점**이다.
 
 ![timing diagram real clk](/assets/img/captures/12_timingdiagram_clk.png){: width='700' .normal }
 
-**CLK 이 활성화 되는 시점을 감지**해서 그 짧은 시점에만 입력값을 사용할 수 있게 EN 이 설정된다. 이러한 EN 신호를 만들어주는 회로를 **Edge Detector** 라고 한다. 그렇다면 이 Edge Detector 의 실제 회로 구성은 어떨까?
+**CLK 이 활성화 되는 시점을 감지**해서 그 짧은 시점에만 입력값을 사용할 수 있게 EN 이 설정된다. 이러한 EN 신호를 만들어주는 회로를 **Edge Detector** 라고 한다. 그렇다면 이 Edge Detector 의 실제 회로 구성은 어떤것들이 있을까?
 
 ![흐음...](/assets/img/emoji/흐음콩.png){: width='150' }
 _흠터레스팅...._
@@ -242,3 +242,57 @@ _흠터레스팅...._
 다음으로 **입력 신호가 1로 바뀐 시점**인데, 인버터가 존재하지 않는 쪽은 바로 1 이 입력되지만, **인버터가 있는 쪽은 사실 몇 나노초(ns)의 딜레이**가 실제로 존재한다.
 
 이러한 사실로 인해 내부적으로는 **CLK 신호가 1로 바뀌고 인버터를 통과하는 아주 짧은 시간동안 AND 게이트의 입력값이 1, 1 로 유지되고 EN 신호가 1로 설정**된다.
+
+또 다른 방법으로는 저항과 캐패시터를 사용하는 방법인데, 이 방법은 AND 게이트처럼 칩을 사용하지 않기 때문에 더 쉬운 방식이다. 그림으로 살펴보자.
+
+![edge detector](/assets/img/captures/14_edgedetector.png){: width='400' .normal }
+
+CLK 신호가 켜지고 캐패시터로 전기가 들어가면 캐패시터가 충전된다. **캐패시터가 충전될수록 통과하는 전류는 줄어든다**. 캐패시터가 모두 충전되면 결국 전압는 0 이 된다.
+
+신호가 줄어드는 속도는 캐패시터의 용량과 저항값을 곱한 값에 따라 결정된다.<br>(Ex. $0.1\mu F * 1K\Omega \; = \; 10^-7 * 10^3 \; = \; 0.1ms$)
+
+##### 그 외의 Flip-Flop
+Flip-Flop 들은 다양한 종류가 있고, 그 쓰임새가 다 다르다.
+
+D Flip-Flop 외에도 SR Flip-Flop, JK Flip-Flop, T Flip-Flop 등이 있다.
+
+---
+
+## 3. 순차회로
+순차회로는 기억회로인 Flip-Flop 과 조합회로인 게이트를 서로 연결한 것이다. 순차회로의 외부 출력은 외부 입력과 Flip-Flop 의 현 상태의 함수로 표시된다.
+
+### 3-1. 순차회로의 상태표, 상태도
+순차회로는 입력, 출력 및 Flip-Flop 의 상태로부터 특성을 알 수 있다.
+
+즉, 다음 상태와 출력은 현재 상태와 입력과의 함수 형태를 가지며 이 사이의 관계도를 상태표라고 한다.
+
+이러한 상태표를 그림으로 도시하면 상태도가 된다.
+
+#### 상태표 예시
+
+||Present|||Next||
+|State||Input|State||Output|
+|A|B|X|A|B|Y|
+|:-:|:-:|:-:|:-:|:-:|:-:|
+|0|0|0|0|0|0|
+|0|0|1|0|1|0|
+|0|1|0|0|0|1|
+|0|1|1|1|1|0|
+|1|0|0|0|0|1|
+|1|0|1|1|0|0|
+|1|1|0|0|0|1|
+|1|1|1|1|0|0|
+
+#### 상태도 예시
+![state diagram](/assets/img/captures/15_statediagram.png){: width='350' .normal }
+
+이러한 정보들은 CPU 등 여러가지 상태값의 회로를 구성하고 만들 때 상태값에 대해 표현하는 방법들로, 뒤에서 더 자세하게 다루게 될 것이다.
+
+---
+
+## 정리
+조합회로와 기억회로(Flip-Flop)이 결합이 됐을 때, 진정한 형태의 회로인 순차 회로가 된다.
+
+다시말해 조합논리회로는 큰 회로를 구성하는 소단위의 완성된 회로라고 볼 수 있다.
+
+조합논리회로의 결과값을 저장하기 위한 회로가 기억회로로, 동기화를 위해 Clock 기반으로 동작하는 Flip-Flop 과 조합논리회로가 연결되면 순차 회로가 된다.
