modify: 포스트내 타 포스트 링크 수정정

--- a/_posts/2023-11-29-npm-패키지-제작기-2.md
+++ b/_posts/2023-11-29-npm-패키지-제작기-2.md
@@ -26,7 +26,7 @@ git push -u origin main
 > github 계정 연동 관련해서 ssh 연결 설정 도중에, key 관련 문제가 발생했다.
 > ssh key 등록을 repo 에도 가능하고 계정 자체에도 가능한데, repo에 등록한 키는 다른곳에 중복 사용이 불가능하다.
 > 그래서 계정에 등록을 하려고 봤더니 이미 삭제한 repo에서 사용중이라 뜨더라. 쩔수없이 새로 만들고 등록하기로 했다.
-> 해당 내용은 포스트 [github 계정 ssh key 설정](/posts/github-계정-ssh-key-설정/) 참조
+> 해당 내용은 포스트 [github 계정 ssh key 설정](/blog/posts/github-계정-ssh-key-설정/) 참조
 {: .prompt-danger }
 
 > 알고보니 ssh 문제보단 뭔가 public 레포 문제인가?
