--- a/_posts/2024-05-15-컴퓨터-구조-2-5-데이터의-표현-조합-논리회로-기억회로-순차회로.md
+++ b/_posts/2024-05-15-컴퓨터-구조-2-5-데이터의-표현-조합-논리회로-기억회로-순차회로.md
@@ -50,7 +50,7 @@ _조합 논리회로, 기억회로, 순차회로_
 
 대표적으로 반가산기(Half Adder)와 전가산기(Full Adder)가 있다.
 
-반가산기는 [이전 포스트](/posts/%EC%BB%B4%ED%93%A8%ED%84%B0-%EA%B5%AC%EC%A1%B0-2-4-%EB%8D%B0%EC%9D%B4%ED%84%B0%EC%9D%98-%ED%91%9C%ED%98%84-%EB%85%BC%EB%A6%AC-%EA%B2%8C%EC%9D%B4%ED%8A%B8-%EB%B6%80%EC%9A%B8-%EB%8C%80%EC%88%98-%EC%B9%B4%EB%85%B8-%EB%A7%B5/#1-1bit-%EB%8D%A7%EC%85%88%EB%B0%98-%EA%B0%80%EC%82%B0%EA%B8%B0){: target='_blank' }의 내용을 참조하자.
+반가산기는 [이전 포스트](/blog/posts/%EC%BB%B4%ED%93%A8%ED%84%B0-%EA%B5%AC%EC%A1%B0-2-4-%EB%8D%B0%EC%9D%B4%ED%84%B0%EC%9D%98-%ED%91%9C%ED%98%84-%EB%85%BC%EB%A6%AC-%EA%B2%8C%EC%9D%B4%ED%8A%B8-%EB%B6%80%EC%9A%B8-%EB%8C%80%EC%88%98-%EC%B9%B4%EB%85%B8-%EB%A7%B5/#1-1bit-%EB%8D%A7%EC%85%88%EB%B0%98-%EA%B0%80%EC%82%B0%EA%B8%B0){: target='_blank' }의 내용을 참조하자.
 
 반가산기에서 두 비트의 합 연산을 하나의 비트로 처리할 수 없어서 캐리 비트 C 를 추가했었다. 다만 반가산기에서는 발생한 캐리 비트를 처리하는 기능이 없고, 개선된 구조가 전가산기이다.
 
